--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
 streamlit>=1.33.0
-pysqlite3-binary>=0.5.0
 nest_asyncio>=1.6.0
+pandas
 PyPDF2>=3.0.1
-langchain>=0.1.14
+python-docx
+pysqlite3-binary>=0.5.0
+langchain>=0.0.148
 langchain-huggingface>=0.0.6
 langchain-community>=0.0.29
 langchain-groq>=0.1.0
-chromadb>=0.3.21
-pandas
-python-docx
-plotly
-sympy
+faiss-cpu>=1.7.2
 numpy
-faiss
